옵션 메뉴에 설정 메뉴 추가 및 오버레이 설정 제어 추가됨

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,7 +92,7 @@
                 <!--<category android:name="android.intent.category.LAUNCHER" />-->
             </intent-filter>
         </activity>
-        <!-- 중복 실행 방지 android:launchMode="singleTask" 추가됨 공지에..-->
+        <!-- 중복 실행 방지 android:launchMode="singleTask" 추가됨-->
 
         <activity android:name=".map.Map" android:label="@string/action_map"  android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".member.Staff" android:label="@string/action_member"  android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar"> </activity>
@@ -102,7 +102,8 @@
         <activity android:name=".meeting.Meeting" android:label="@string/action_meeting" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".leave.Leave" android:label="@string/action_myeluo" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".program.ProgramInformation" android:label="@string/program_info" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar" ></activity>
-        <activity android:name=".meeting.MeetingBookingList" android:label="@string/action_meeting_reg" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar"   ></activity>
+        <activity android:name=".meeting.MeetingBookingList" android:label="@string/action_meeting_reg" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar" android:launchMode="singleTask"   ></activity>
+        <activity android:name=".settings.Settings" android:label="@string/settings" android:screenOrientation="portrait" android:theme="@style/AppTheme.NoActionBar"   ></activity>
 
     </application>
 </manifest>
