--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
-        versionName "1.6.1"
+        versionName "1.6.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -46,6 +46,7 @@ dependencies {
     compile "com.google.firebase:firebase-messaging:10.0.1" //클라우드 메시징 및 알림
     compile 'com.firebase:firebase-jobdispatcher:0.5.2'
 
+    compile 'com.google.firebase:firebase-crash:10.0.1'     //오류보고
 }
 android {
     useLibrary 'org.apache.http.legacy'  //아파치 http 모듈 6.0부터 지원 하지 않아 넣었음
